--- a/styles.css
+++ b/styles.css
@@ -8,23 +8,27 @@ body {
   background-color: #26568E;
   text-align: center;
   padding: 20px;
+  color: white;
 }
 
 .main-description {
   background-color: #000000;
   text-align: center;
   padding: 20px;
+  color: white;
 }
 
 .further-explanation {
   background-color: #243646;
   text-align: center;
   padding: 20px;
+  color: white;
 }
 
 .main-nav {
   overflow: hidden;
   background-color: #333;
+  color: white;
 }
 
 .main-nav a {
@@ -34,6 +38,7 @@ body {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  color: white;
 }
 
 .main-nav a:hover {
