--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@ body {
   padding: 20px;
   box-sizing: border-box;
 }
+
+.breakfast-description {
+    color: #26568E;
+  }
+
 .main-heading {
   background-color: #26568E;
   text-align: center;
